# AutoMLIP

./: LICENSE  README.md  pyproject.toml  setup.py
automlip/: __init__.py  checkpoint.py  config.py  labeller.py  modes.py  pipeline.py
automlip/active/: convergence.py  qbc.py  sampler.py  tau_acc.py
automlip/calculators/: __init__.py  base.py  qe.py  qe_errors.py
automlip/generators/: __init__.py  base.py  random.py
automlip/labellers/: batch.py  qe.py  teacher.py
automlip/samplers/: augment.py  md.py  rss.py
automlip/schedulers/: __init__.py  base.py  local.py  local_parallel.py  pbs.py  slurm.py
automlip/selectors/: committee.py
automlip/trainers/: __init__.py  base.py  gap.py  mace.py  nequip.py
automlip/utils/: checkpoint.py  data.py  data_loader.py  hyperopt.py  sampling.py
examples/: example_abn.py  run_amorphous_carbon.py  run_carbon_bno.py  submit_driver.pbs
tests/: test_automlip.py  test_config.py
